[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/Animatronic.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Guard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=3]
[ext_resource path="res://Editor.tres" type="TileSet" id=4]
[ext_resource path="res://Misc.tres" type="TileSet" id=5]
[ext_resource path="res://Sprites/Tilesets/triggers.png" type="Texture" id=6]
[ext_resource path="res://Fonts/bebasneuecyrillic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/Icons/win_screen.png" type="Texture" id=8]
[ext_resource path="res://Fonts/bebas.tres" type="DynamicFont" id=9]
[ext_resource path="res://Menu.tres" type="Theme" id=10]
[ext_resource path="res://Sprites/light.png" type="Texture" id=11]
[ext_resource path="res://scenes/JUMPSCARE.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Misc/Countdown.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Misc/Triggers.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Lose_Screen.tscn" type="PackedScene" id=15]
[ext_resource path="res://shaders/vignette.tres" type="Material" id=16]
[ext_resource path="res://scenes/Guard_Chasing.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/sparkle.png" type="Texture" id=18]
[ext_resource path="res://Sprites/character_editor/abilities/wings.png" type="Texture" id=19]

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform vec3 ColorTopLeft;
uniform float TopLeftAlpha:hint_range(0,1);

uniform vec3 ColorTopRight2;
uniform float ToprightAlpha2:hint_range(0,1);

uniform vec3 ColordownLeft2;
uniform float downLeftAlpha2:hint_range(0,1);

uniform vec3 ColordownRight3;
uniform float downrightAlpha3:hint_range(0,1);


// Gradient4Corners

vec4 gradient4cornersFunc(vec2 _uv_c0rner, vec4 _top_left_c0rner, vec4 _top_right_c0rner, vec4 _bottom_left_c0rner, vec4 _bottom_right_c0rner){
	vec4 _c0l0r_t0p_c0rner = mix(_top_left_c0rner, _top_right_c0rner, _uv_c0rner.x);
	vec4 _c0l0r_b0tt0m_c0rner = mix(_bottom_left_c0rner, _bottom_right_c0rner, _uv_c0rner.x);
	return mix(_c0l0r_t0p_c0rner, _c0l0r_b0tt0m_c0rner, _uv_c0rner.y);
}


void fragment() {
// Input:3
	vec3 n_out3p0 = vec3(UV, 0.0);

// VectorUniform:4
	vec3 n_out4p0 = ColorTopLeft;

// ScalarUniform:5
	float n_out5p0 = TopLeftAlpha;

// VectorUniform:7
	vec3 n_out7p0 = ColorTopRight2;

// ScalarUniform:6
	float n_out6p0 = ToprightAlpha2;

// VectorUniform:10
	vec3 n_out10p0 = ColordownLeft2;

// ScalarUniform:11
	float n_out11p0 = downLeftAlpha2;

// VectorUniform:8
	vec3 n_out8p0 = ColordownRight3;

// ScalarUniform:9
	float n_out9p0 = downrightAlpha3;

// Gradient4Corners:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 n_out2p0n_out2p1 = gradient4cornersFunc(n_out3p0.xy, vec4(n_out4p0, n_out5p0), vec4(n_out7p0, n_out6p0), vec4(n_out10p0, n_out11p0), vec4(n_out8p0, n_out9p0));
		n_out2p0 = n_out2p0n_out2p1.rgb;
		n_out2p1 = n_out2p0n_out2p1.a;
	}

// Output:0
	COLOR.rgb = n_out2p0;
	COLOR.a = n_out2p1;

}


"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )
shader_param/ColorTopLeft = Vector3( 0, 0, 0 )
shader_param/TopLeftAlpha = 1.0
shader_param/ColorTopRight2 = null
shader_param/ToprightAlpha2 = 0.0
shader_param/ColordownLeft2 = null
shader_param/downLeftAlpha2 = 1.0
shader_param/ColordownRight3 = null
shader_param/downrightAlpha3 = 0.0

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 41
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 1.25 )

[sub_resource type="TileSet" id=1]
0/name = "shake"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 63, 0, 20, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tpx"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 21, 21, 20, 20 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tpy"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 21, 0, 20, 20 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "cb left"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 42, 21, 20, 20 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "cb right"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 63, 21, 20, 20 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "cb up"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 84, 21, 20, 20 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "cb down"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 105, 21, 20, 20 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "lock abil"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 42, 0, 20, 20 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "scale"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 20, 20 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "cam zoom"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 21, 20, 20 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "shader glitch"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 2, 61, 20, 20 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "shader chromatic"
11/texture = ExtResource( 6 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 23, 61, 20, 20 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "shader retro"
12/texture = ExtResource( 6 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 44, 61, 20, 20 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "shader vhs"
13/texture = ExtResource( 6 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 65, 61, 20, 20 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "off shaders"
14/texture = ExtResource( 6 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 2, 82, 20, 20 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "unlock abil"
15/texture = ExtResource( 6 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 84, 0, 20, 20 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0

[node name="Gameplay" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -54

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="FileDialog2" type="FileDialog" parent="UI"]
margin_left = 266.0
margin_top = 74.0
margin_right = 772.0
margin_bottom = 474.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/"
current_path = "/"

[node name="bg" type="TextureRect" parent="UI"]
modulate = Color( 0.509804, 0.498039, 0.709804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 7

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="A" type="Label" parent="UI/Control"]
modulate = Color( 1, 0.803922, 0.0156863, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -152.0
margin_right = 494.0
margin_bottom = -123.0
custom_fonts/font = ExtResource( 9 )
text = "Author:"
align = 1

[node name="M" type="Label" parent="UI/Control"]
modulate = Color( 0.0156863, 0.580392, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -501.0
margin_top = -118.0
margin_right = 493.0
margin_bottom = -89.0
custom_fonts/font = ExtResource( 9 )
text = "Music:"
align = 1

[node name="D" type="Label" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -497.0
margin_top = 130.0
margin_right = 497.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 9 )
text = "DESCRIPTION:"
align = 1
autowrap = true

[node name="N" type="Label" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -498.0
margin_top = -194.0
margin_right = 500.0
margin_bottom = -148.0
custom_fonts/font = SubResource( 2 )
text = "name:"
align = 1

[node name="Play" type="Button" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = 38.0
margin_right = 70.0
margin_bottom = 91.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "PLAY"

[node name="Play2" type="Button" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.0
margin_top = 38.0
margin_right = -269.0
margin_bottom = 91.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="Play3" type="Button" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 105.0
margin_top = 38.0
margin_right = 291.0
margin_bottom = 91.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "map editor"

[node name="Play4" type="Button" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = 39.0
margin_right = -97.0
margin_bottom = 92.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "LOAD MAP"

[node name="TextureRect3" type="TextureRect" parent="UI/Control"]
modulate = Color( 1, 0.6, 0.4, 0.0901961 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = 24.0
margin_right = 645.0
margin_bottom = 246.0
mouse_filter = 2
texture = ExtResource( 18 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="UI/Control"]
modulate = Color( 0.45098, 0.4, 1, 0.117647 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -724.0
margin_top = -328.0
margin_right = -69.0
mouse_filter = 2
texture = ExtResource( 18 )
expand = true

[node name="ColorRect" type="ColorRect" parent="UI"]
material = ExtResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="JUMPSCARE" parent="." instance=ExtResource( 12 )]
get_coins = false

[node name="Lose_Screen" parent="." instance=ExtResource( 15 )]
layer = 2

[node name="Countdown" parent="." instance=ExtResource( 13 )]

[node name="GP" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Animatronic" parent="." instance=ExtResource( 1 )]
position = Vector2( 498, 286 )
z_index = 131
speed = 95

[node name="custom" parent="Animatronic" index="0"]
extra_ability = 2
color_hat = Color( 4.87, 1.54454, 0, 1 )
color_eyes = Color( 1, 1, 1, 0.909804 )
color_eyes2 = Color( 0.0461269, 0.00262951, 0.124003, 0.878431 )
color_head = Color( 0.358378, 0, 1, 0.984314 )
color_body = Color( 0.364362, 0, 1, 0.984314 )
color_legs = Color( 0.350399, 0, 1, 0.984314 )

[node name="Legs" parent="Animatronic" index="3"]
modulate = Color( 0.350399, 0, 1, 0.984314 )

[node name="Bodys" parent="Animatronic" index="4"]
modulate = Color( 0.364362, 0, 1, 0.984314 )

[node name="Heads" parent="Animatronic" index="5"]
modulate = Color( 0.358378, 0, 1, 0.984314 )

[node name="Hats" parent="Animatronic" index="6"]
modulate = Color( 4.87, 1.54454, 0, 1 )

[node name="2" parent="Animatronic/Eyes" index="2"]
modulate = Color( 0.0461269, 0.00262951, 0.124003, 0.878431 )

[node name="1" parent="Animatronic/Eyes" index="3"]
modulate = Color( 1, 1, 1, 0.909804 )

[node name="AnimationTree" parent="Animatronic" index="11"]
parameters/playback = SubResource( 16 )

[node name="Icon2" parent="Animatronic/HUD/Abilities" index="2"]
texture = ExtResource( 19 )

[node name="Light2D2" type="Light2D" parent="Animatronic"]
position = Vector2( 2, -4 )
texture = ExtResource( 11 )
texture_scale = 0.15
energy = 0.45

[node name="Area2D" type="Area2D" parent="Animatronic"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animatronic/Area2D"]
position = Vector2( 1, 13.75 )
shape = SubResource( 4 )

[node name="Spawnpoint" type="Position2D" parent="."]

[node name="Guard" parent="." instance=ExtResource( 2 )]
scale = Vector2( 2, 2 )
z_index = 36

[node name="Level" type="Navigation2D" parent="."]
z_index = -1

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 458789, 53, 0 )

[node name="TileMap2" type="TileMap" parent="Level"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 20, 20 )
centered_textures = true
format = 1

[node name="TileMap3" type="TileMap" parent="Level"]
tile_set = SubResource( 1 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 131109, 9, 0 )

[node name="Spawnpointx" type="SpinBox" parent="Level"]
visible = false
margin_left = 443.0
margin_top = 145.0
margin_right = 517.0
margin_bottom = 169.0
min_value = -1e+10
max_value = 1e+10
value = 323.0

[node name="Spawnpointy" type="SpinBox" parent="Level"]
visible = false
margin_left = 443.0
margin_top = 173.0
margin_right = 517.0
margin_bottom = 197.0
min_value = -1e+10
max_value = 1e+10
value = 126.0

[node name="Guardx" type="SpinBox" parent="Level"]
visible = false
margin_left = 361.0
margin_top = 173.0
margin_right = 435.0
margin_bottom = 197.0
min_value = -1e+10
max_value = 1e+10
value = 310.0

[node name="Guardy" type="SpinBox" parent="Level"]
visible = false
margin_left = 361.0
margin_top = 146.0
margin_right = 435.0
margin_bottom = 170.0
min_value = -1e+10
max_value = 1e+10
value = 755.0

[node name="amb" type="SpinBox" parent="Level"]
visible = false
margin_left = 361.0
margin_top = 146.0
margin_right = 435.0
margin_bottom = 170.0
min_value = -1e+10
max_value = 1e+10

[node name="mode" type="SpinBox" parent="Level"]
visible = false
margin_left = 361.0
margin_top = 146.0
margin_right = 435.0
margin_bottom = 170.0
min_value = -1e+10
max_value = 1e+10

[node name="ColorPicker" type="ColorPicker" parent="Level"]
visible = false
margin_left = -223.0
margin_top = 104.0
margin_right = 78.0
margin_bottom = 566.0

[node name="LineEdit" type="LineEdit" parent="Level"]
visible = false
margin_right = 177.0
margin_bottom = 24.0

[node name="LineEdit2" type="LineEdit" parent="Level"]
visible = false
margin_left = 2.0
margin_top = 43.0
margin_right = 177.0
margin_bottom = 67.0

[node name="LineEdit3" type="LineEdit" parent="Level"]
visible = false
margin_left = 2.0
margin_top = 43.0
margin_right = 399.0
margin_bottom = 272.0

[node name="Triggers" parent="." instance=ExtResource( 14 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="KinematicBody2D" parent="." instance=ExtResource( 17 )]
z_index = 51

[node name="Line2D" type="Line2D" parent="."]
visible = false

[connection signal="file_selected" from="UI/FileDialog2" to="GP" method="_on_FileDialog2_file_selected"]
[connection signal="pressed" from="UI/Control/Play" to="GP" method="_on_Play_pressed"]
[connection signal="pressed" from="UI/Control/Play2" to="GP" method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Control/Play3" to="GP" method="_on_Map_Editor_pressed"]
[connection signal="pressed" from="UI/Control/Play4" to="GP" method="_on_Load_Map_pressed"]
[connection signal="area_entered" from="Animatronic/Wing/Halloween/Area2D" to="Guard" method="_on_Halloween_area_entered"]

[editable path="Animatronic"]
